# euroflex-bess-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  environment.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  artifact_contract.md  assumptions_and_limitations.md  benchmark_trust_model.md  byo_ml_forecast_provider.md  capability_matrix.md  commercial_positioning.md  commitment_locking.md  common_failure_modes.md  compatibility_and_deprecation_policy.md  config_schema.md  connector_caching_and_freshness.md  data_provenance.md  execution_handoff.md  export_profiles.md  how_to_add_market_adapter.md  index.md  install.md  known_limitations.md  migration_v3_to_v4.md  operator_runbook.md  public_checkpoint_revision_limitations.md  quickstart.md  reconciliation.md  release_notes.md  revision_workflow.md  run_registry.md  service_api.md  stable_experimental_matrix.md  using_tennet_live_inputs.md
examples/: README.md
examples/batches/: canonical_belgium_full_stack.yaml
examples/custom_models/: deterministic_visible_mean.py
examples/data/: belgium_afrr_activation_price_down.csv  belgium_afrr_activation_price_up.csv  belgium_afrr_activation_ratio_down.csv  (+15 more)
notebooks/: belgium_vs_netherlands_walk_forward.ipynb  netherlands_afrr_dual_pricing_value.ipynb  portfolio_shared_constraints.ipynb  reserve_aware_value_stacking.ipynb  schedule_revision_reconciliation.ipynb
schemas/: config.v4.json  export_manifest.schema.json  reconciliation_summary.schema.json  summary.schema.json
scripts/: canonical_pipeline.py  check_perf_baseline.py  generate_schemas.py  render_demo_gif.py  render_tennet_hero_gif.py
tests/: conftest.py  test_artifact_contract.py  test_backtest.py  test_cli.py  test_config.py  test_connectors.py  test_contract_schemas.py  test_docs_paths.py  test_exports.py  test_forecasts.py  test_live_connectors.py  test_market_adapters.py  test_normalization.py  test_notebook.py  test_release_hardening.py  test_render_demo_gif.py  test_render_tennet_hero_gif.py  test_repo_hygiene.py  test_revision.py  test_run_registry.py  test_service.py  test_solver.py  test_validation.py  test_walk_forward.py
(+93 files in other folders)
